--- a/Webdev Project/ugly html/webdev.html
+++ b/Webdev Project/ugly html/webdev.html
@@ -53,7 +53,7 @@ Sec 001
         </span>
     </div>
         <div class="common leftmenu">
-            <p>Want something better? Check out my <a href="file:///C:/Users/riasa/Desktop/startbootstrap-clean-blog-gh-pages/index.html">real website</a>
+            <p>Want something better? Check out my <a href="../../index.html">real website</a>
             </p>
             <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
         Back to the <a href="#top">top</a>
